--- a/gameengine-teavmrenderer/pom.xml
+++ b/gameengine-teavmrenderer/pom.xml
@@ -22,17 +22,7 @@
     <dependencies>
         <dependency>
             <groupId>de.mirkosertic</groupId>
-            <artifactId>gameengine</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>de.mirkosertic</groupId>
-            <artifactId>gameengine-jbox2d</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>de.mirkosertic</groupId>
-            <artifactId>gameengine-lua</artifactId>
+            <artifactId>gameengine-teavmcommon</artifactId>
         </dependency>
 
         <dependency>
