--- a/gameengine-editor/pom.xml
+++ b/gameengine-editor/pom.xml
@@ -75,6 +75,34 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.8</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <configuration>
+                            <target>
+                                <mkdir dir="${project.build.directory}/electron"/>
+                                <copy todir="${project.build.directory}/electron">
+                                    <fileset dir="${project.build.directory}/${project.build.finalName}"/>
+                                </copy>
+                                <exec executable="npm" dir="${project.build.directory}/electron">
+                                    <arg value="install"/>
+                                </exec>
+                                <exec executable="electron-packager" dir="${project.build.directory}/electron">
+                                    <arg value="."/>
+                                    <arg value="--all"/>
+                                </exec>
+                            </target>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
     <dependencies>
