Working on Windows Electron Build

--- a/gameengine-editor/src/main/node/resources/package.json
+++ b/gameengine-editor/src/main/node/resources/package.json
@@ -1,6 +1,6 @@
 {
   "name": "GameEngine-Editor",
-  "version": "1.0.0",
+  "version": "@VERSION@",
   "description": "An Editor for the Gameengine",
   "main": "main.js",
   "scripts": {
