--- a/gameengine-editor/pom.xml
+++ b/gameengine-editor/pom.xml
@@ -75,34 +75,6 @@
                     </execution>
                 </executions>
             </plugin>
-
-            <plugin>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <version>1.8</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <configuration>
-                            <target>
-                                <mkdir dir="${project.build.directory}/electron"/>
-                                <copy todir="${project.build.directory}/electron">
-                                    <fileset dir="${project.build.directory}/${project.build.finalName}"/>
-                                </copy>
-                                <exec executable="npm" dir="${project.build.directory}/electron">
-                                    <arg value="install"/>
-                                </exec>
-                                <exec executable="electron-packager" dir="${project.build.directory}/electron">
-                                    <arg value="."/>
-                                    <arg value="--all"/>
-                                </exec>
-                            </target>
-                        </configuration>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
         </plugins>
     </build>
     <dependencies>
@@ -139,4 +111,97 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <profiles>
+        <profile>
+            <id>platform-linux</id>
+            <activation>
+                <os>
+                    <family>linux</family>
+                </os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <version>1.8</version>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <configuration>
+                                    <target>
+                                        <mkdir dir="${project.build.directory}/electron"/>
+                                        <copy todir="${project.build.directory}/electron">
+                                            <fileset dir="${project.build.directory}/${project.build.finalName}"/>
+                                        </copy>
+                                        <copy todir="${project.build.directory}/electron">
+                                            <fileset dir="${project.basedir}/src/main/node/resources"/>
+                                            <filterset>
+                                                <filter token="VERSION" value="${project.version}"/>
+                                            </filterset>
+                                        </copy>
+                                        <exec executable="npm" dir="${project.build.directory}/electron">
+                                            <arg value="install"/>
+                                        </exec>
+                                        <exec executable="electron-packager" dir="${project.build.directory}/electron">
+                                            <arg value="."/>
+                                            <arg value="--all"/>
+                                        </exec>
+                                    </target>
+                                </configuration>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>platform-windows</id>
+            <activation>
+                <os>
+                    <family>windows</family>
+                </os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <version>1.8</version>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <configuration>
+                                    <target>
+                                        <mkdir dir="${project.build.directory}/electron"/>
+                                        <copy todir="${project.build.directory}/electron">
+                                            <fileset dir="${project.build.directory}/${project.build.finalName}"/>
+                                        </copy>
+                                        <copy todir="${project.build.directory}/electron">
+                                            <fileset dir="${project.basedir}/src/main/node/resources"/>
+                                            <filterset>
+                                                <filter token="VERSION" value="${project.version}"/>
+                                            </filterset>
+                                        </copy>
+                                        <exec executable="npm.cmd" dir="${project.build.directory}/electron">
+                                            <arg value="install"/>
+                                        </exec>
+                                        <exec executable="electron-packager.cmd" dir="${project.build.directory}/electron">
+                                            <arg value="."/>
+                                            <arg value="--all"/>
+                                        </exec>
+                                    </target>
+                                </configuration>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
