--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>gameengine-teavmcommon</module>
         <module>gameengine-teavmrenderer</module>
         <module>gameengine-dragomerenderer</module>
+        <module>gameengine-cordovarenderer</module>
         <module>gameengine-tools</module>
         <module>gameengine-editor</module>
         <module>gamecomposer</module>
