Buf Fixing and styling

--- a/gameengine-editor/src/main/webapp/bower.json
+++ b/gameengine-editor/src/main/webapp/bower.json
@@ -14,5 +14,9 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "resolutions": {
+    "polymer": "^1.6.1",
+    "webcomponentsjs": "^0.7.20"
+  }
 }
