--- a/gameengine-cordovarenderer/pom.xml
+++ b/gameengine-cordovarenderer/pom.xml
@@ -160,5 +160,106 @@
                 </plugins>
             </build>
         </profile>
+
+        <profile>
+            <id>platform-wubdiws</id>
+            <activation>
+                <os>
+                    <family>windows</family>
+                </os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <version>1.8</version>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <configuration>
+                                    <target>
+                                        <mkdir dir="${project.build.directory}"/>
+                                        <!-- New Empty Project -->
+                                        <exec executable="cordova.cmd" dir="${project.build.directory}">
+                                            <arg value="create"/>
+                                            <arg value="${project.cordova.directory}"/>
+                                            <arg value="${project.cordova.packagename}"/>
+                                            <arg value="${project.cordova.name}"/>
+                                        </exec>
+                                        <!-- Add android support -->
+                                        <exec executable="cordova.cmd" dir="${project.build.directory}/${project.cordova.directory}">
+                                            <arg value="platform"/>
+                                            <arg value="add"/>
+                                            <arg value="android"/>
+                                        </exec>
+                                        <!-- Add Crosswalk Support -->
+                                        <exec executable="cordova.cmd" dir="${project.build.directory}/${project.cordova.directory}">
+                                            <arg value="plugin"/>
+                                            <arg value="add"/>
+                                            <arg value="cordova-plugin-crosswalk-webview"/>
+                                        </exec>
+
+                                        <delete includeemptydirs="true">
+                                            <fileset dir="${project.build.directory}/${project.cordova.directory}/www" includes="**/*"/>
+                                        </delete>
+
+                                        <copy todir="${project.build.directory}/${project.cordova.directory}/www">
+                                            <fileset dir="${project.build.directory}/webruntime" includes="**/*"/>
+                                        </copy>
+
+                                        <!-- Trigger up build -->
+                                        <exec executable="cordova.cmd" dir="${project.build.directory}/${project.cordova.directory}">
+                                            <arg value="build"/>
+                                            <arg value="android"/>
+                                        </exec>
+                                    </target>
+                                </configuration>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>build-helper-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>attach-artifacts</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>attach-artifact</goal>
+                                </goals>
+                                <configuration>
+                                    <artifacts>
+                                        <artifact>
+                                            <file>${project.build.directory}/${project.cordova.directory}/platforms/android/build/outputs/apk/android-armv7-debug.apk</file>
+                                            <type>apk</type>
+                                            <classifier>armv7</classifier>
+                                        </artifact>
+                                        <artifact>
+                                            <file>${project.build.directory}/${project.cordova.directory}/platforms/android/build/outputs/apk/android-armv7-debug-unaligned.apk</file>
+                                            <type>apk</type>
+                                            <classifier>armv7-unaligned</classifier>
+                                        </artifact>
+                                        <artifact>
+                                            <file>${project.build.directory}/${project.cordova.directory}/platforms/android/build/outputs/apk/android-x86-debug.apk</file>
+                                            <type>apk</type>
+                                            <classifier>x86</classifier>
+                                        </artifact>
+                                        <artifact>
+                                            <file>${project.build.directory}/${project.cordova.directory}/platforms/android/build/outputs/apk/android-x86-debug-unaligned.apk</file>
+                                            <type>apk</type>
+                                            <classifier>x86-unaligned</classifier>
+                                        </artifact>
+                                    </artifacts>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 </project>
