--- a/gameengine/pom.xml
+++ b/gameengine/pom.xml
@@ -125,4 +125,83 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <profiles>
+        <profile>
+            <id>jsweet</id>
+
+            <repositories>
+                <repository>
+                    <id>jsweet-release</id>
+                    <releases>
+                        <enabled>true</enabled>
+                    </releases>
+                    <snapshots>
+                        <enabled>false</enabled>
+                    </snapshots>
+                    <url>http://repository.jsweet.org/artifactory/libs-release-local</url>
+                </repository>
+                <repository>
+                    <id>jsweet-snapshot</id>
+                    <releases>
+                        <enabled>false</enabled>
+                    </releases>
+                    <snapshots>
+                        <enabled>true</enabled>
+                    </snapshots>
+                    <url>http://repository.jsweet.org/artifactory/libs-snapshot-local</url>
+                </repository>
+            </repositories>
+
+            <pluginRepositories>
+                <pluginRepository>
+                    <id>jsweet-plugins-release</id>
+                    <name>plugins-release</name>
+                    <url>http://repository.jsweet.org/artifactory/plugins-release-local</url>
+                </pluginRepository>
+                <pluginRepository>
+                    <snapshots />
+                    <id>jsweet-plugins-snapshots</id>
+                    <name>plugins-snapshot</name>
+                    <url>http://repository.jsweet.org/artifactory/plugins-snapshot-local</url>
+                </pluginRepository>
+            </pluginRepositories>
+
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.jsweet</groupId>
+                        <artifactId>jsweet-maven-plugin</artifactId>
+                        <version>1.2.0-SNAPSHOT</version>
+                        <configuration>
+                            <outDir>javascript</outDir>
+                            <targetVersion>ES3</targetVersion>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>generate-js</id>
+                                <phase>prepare-package</phase>
+                                <goals>
+                                    <goal>jsweet</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+
+            <dependencies>
+                <dependency>
+                    <groupId>org.jsweet.candies</groupId>
+                    <artifactId>jsweet-core</artifactId>
+                    <version>1.2.0-SNAPSHOT</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.jsweet.candies</groupId>
+                    <artifactId>j4ts</artifactId>
+                    <version>0.1.0</version>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
 </project>
