--- a/gameengine/pom.xml
+++ b/gameengine/pom.xml
@@ -124,6 +124,12 @@
             <artifactId>mockito-all</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.8.4</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <profiles>
