--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,13 @@ jdk:
   - oraclejdk8
 node_js:
   - "6"
+android:
+  components:
+    - tools # to get the new `repository-11.xml`
+    - tools # see https://github.com/travis-ci/travis-ci/issues/6040#issuecomment-219367943)
+    - platform-tools
+    - build-tools-24.0.2
+    - android-24
 env:
   global:
     - "MAVEN_OPTS=-Xmx2536m -XX:MaxPermSize=1024m -XX:+CMSClassUnloadingEnabled -XX:-UseGCOverheadLimit"
@@ -14,10 +21,10 @@ before_install:
   # Install base Android SDK
   - sudo apt-get update -qq
   - if [ `uname -m` = x86_64 ]; then sudo apt-get install -qq --force-yes libgd2-xpm ia32-libs ia32-libs-multiarch; fi
-  - wget https://dl.google.com/android/android-sdk_r24.4.1-linux.tgz
-  - tar xzf android-sdk_r24.4.1-linux.tgz
-  - export ANDROID_HOME=$PWD/android-sdk-linux
-  - export PATH=${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools
+  #- wget https://dl.google.com/android/android-sdk_r24.4.1-linux.tgz
+  #- tar xzf android-sdk_r24.4.1-linux.tgz
+  #- export ANDROID_HOME=$PWD/android-sdk-linux
+  #- export PATH=${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools
 
   # Install required Android components.
   # - android list sdk
@@ -53,6 +60,6 @@ before_install:
   #30- Samples for SDK API 7, revision 1
   #31- Glass Development Kit Preview, Android API 19, revision 11
   #32- Android Support Library, revision 19.1
-  - android list sdk --all
-  - echo "y" | android update sdk -u -a -t 1,3,5,6,29,30,37,31
-  - echo "y" | android update sdk --no-ui --obsolete --force
+  #- android list sdk --all
+  #- echo "y" | android update sdk -u -a -t 1,3,5,6,29,30,37,31
+  #- echo "y" | android update sdk --no-ui --obsolete --force
