--- a/gameengine-teavmrenderer/pom.xml
+++ b/gameengine-teavmrenderer/pom.xml
@@ -102,7 +102,8 @@
                             <runtime>SEPARATE</runtime>
                             <!-- Whether TeaVM should produce minified JavaScript. Can reduce JavaScript file size more than
                                  two times -->
-                            <minifying>false</minifying>
+                            <minifying>true</minifying>
+                            <optimizationLevel>FULL</optimizationLevel>
                             <!-- Whether TeaVM should produce debug information for its built-in debugger -->
                             <debugInformationGenerated>true</debugInformationGenerated>
                             <!-- Whether TeaVM should produce source maps file -->
@@ -112,6 +113,19 @@
                             <sourceFilesCopied>true</sourceFilesCopied>
                         </configuration>
                     </execution>
+                    <!--<execution>
+                        <id>wasm-client</id>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                        <configuration>
+                            <targetDirectory>${project.build.directory}/generated/wasm/teavm-wasm</targetDirectory>
+                            <mainClass>e.mirkosertic.gameengine.teavm.TeaVMRenderer</mainClass>
+                            <debugInformationGenerated>true</debugInformationGenerated>
+                            <targetType>WEBASSEMBLY</targetType>
+                            <optimizationLevel>FULL</optimizationLevel>
+                        </configuration>
+                    </execution>-->
                 </executions>
             </plugin>
         </plugins>
