--- a/gameengine-teavmrenderer/src/main/webapp/bower.json
+++ b/gameengine-teavmrenderer/src/main/webapp/bower.json
@@ -18,6 +18,6 @@
   "dependencies": {
     "howler.js": "howler#^2.0.1",
     "pixi.js": "pixi#^4.1.0",
-    "firebase": "^3.5.1"
+    "firebase": "2.2.2"
   }
 }
