--- a/gameengine-editor/src/main/webapp/bower.json
+++ b/gameengine-editor/src/main/webapp/bower.json
@@ -19,7 +19,7 @@
     "polymer": "^1.6.1",
     "webcomponentsjs": "^0.7.20",
     "juicy-ace-editor": "^1.2.0",
-    "firebase": "^3.5.1",
+    "firebase": "2.2.2",
     "pixi.js": "pixi#^4.1.0",
     "howler.js": "howler#^2.0.1"
   }
