Fixed broken LUA editor

--- a/gameengine-editor/src/main/webapp/bower.json
+++ b/gameengine-editor/src/main/webapp/bower.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "polymer": "^1.6.1",
     "webcomponentsjs": "^0.7.20",
-    "juicy-ace-editor": "^1.2.0",
+    "ace-builds": "~1.2.0",
     "firebase": "2.2.2",
     "pixi.js": "pixi#^4.1.0",
     "howler.js": "howler#^2.0.1"
