--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ env:
   global:
     - "MAVEN_OPTS=-Xmx2536m -XX:MaxPermSize=1024m -XX:+CMSClassUnloadingEnabled -XX:-UseGCOverheadLimit"
 before_install:
+  - "npm install n -g"
+  - "n stable"
   - "npm install electron-packager -g"
   - "npm install cordova -g"
   - "npm install bower -g"
