Working on web editor, added webcomponents vulcanization

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,6 @@ before_install:
   - "npm install electron-packager -g"
   - "npm install cordova -g"
   - "npm install bower -g"
+  - "npm install vulcanize -g"
   - "env"
   - "echo 'MAVEN_OPTS = $MAVEN_OPTS'"
