--- a/gameengine-editor/pom.xml
+++ b/gameengine-editor/pom.xml
@@ -181,6 +181,22 @@
                                 </configuration>
                             </execution>
                             <execution>
+                                <id>vulcanize</id>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <phase>package</phase>
+                                <configuration>
+                                    <target>
+                                        <exec executable="vulcanize" dir="${project.build.directory}/${project.build.finalName}">
+                                            <arg value="gameeditor-allcomponents.html"/>
+                                            <arg value="--out-html"/>
+                                            <arg value="${project.build.directory}/${project.build.finalName}/gameeditor-allcomponents-vulcanized.html"/>
+                                        </exec>
+                                    </target>
+                                </configuration>
+                            </execution>
+                            <execution>
                                 <id>electronpackager</id>
                                 <phase>package</phase>
                                 <configuration>
@@ -241,7 +257,22 @@
                                     </target>
                                 </configuration>
                             </execution>
-
+                            <execution>
+                                <id>vulcanize</id>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <phase>package</phase>
+                                <configuration>
+                                    <target>
+                                        <exec executable="vulcanize.cmd" dir="${project.build.directory}/${project.build.finalName}">
+                                            <arg value="gameeditor-allcomponents.html"/>
+                                            <arg value="--out-html"/>
+                                            <arg value="${project.build.directory}/${project.build.finalName}/gameeditor-allcomponents-vulcanized.html"/>
+                                        </exec>
+                                    </target>
+                                </configuration>
+                            </execution>
                             <execution>
                                 <id>electronpackager</id>
                                 <phase>package</phase>
