--- a/gameengine-editor/pom.xml
+++ b/gameengine-editor/pom.xml
@@ -102,7 +102,8 @@
                             <runtime>SEPARATE</runtime>
                             <!-- Whether TeaVM should produce minified JavaScript. Can reduce JavaScript file size more than
                                  two times -->
-                            <minifying>false</minifying>
+                            <minifying>true</minifying>
+                            <optimizationLevel>FULL</optimizationLevel>
                             <!-- Whether TeaVM should produce debug information for its built-in debugger -->
                             <debugInformationGenerated>true</debugInformationGenerated>
                             <!-- Whether TeaVM should produce source maps file -->
