--- a/gameengine-editor/src/main/webapp/bower.json
+++ b/gameengine-editor/src/main/webapp/bower.json
@@ -20,7 +20,7 @@
     "webcomponentsjs": "^0.7.20",
     "ace-builds": "~1.2.0",
     "firebase": "2.2.2",
-    "pixi.js": "pixi#^4.1.0",
+    "pixi.js": "4.3.0",
     "howler.js": "howler#^2.0.1",
     "toastr": "^2.1.3"
   }
