--- a/pom.xml
+++ b/pom.xml
@@ -149,7 +149,7 @@
     </dependencyManagement>
 
     <properties>
-        <teavm.version>0.5.0-dev-244</teavm.version>
+        <teavm.version>0.5.0-SNAPSHOT</teavm.version>
     </properties>
 
     <build>
