--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,9 @@ before_install:
   - "npm install cordova -g"
   - "npm install bower -g"
   - "npm install vulcanize -g"
+  - "git clone https://github.com/mirkosertic/teavm.git ./teavm"
+  - "cd teavm"
+  - "mvn clean install -DskipTests"
+  - "cd .."
   - "env"
   - "echo 'MAVEN_OPTS = $MAVEN_OPTS'"
