--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ before_install:
   - "npm install vulcanize -g"
   - "git clone https://github.com/mirkosertic/teavm.git ./teavm"
   - "cd teavm"
+  - "git checkout devmse"
   - "mvn clean install -DskipTests >/dev/null 2>&1"
   - "cd .."
   - "env"
